# Taint-Flow-Auditor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
catalog/: sanitizers.yaml  sinks.yaml  sources.yaml
examples/demo-app/: README.md  cli.py  cmd.py  db.py  files.py  views.py
scripts/: record-demo.sh  run-demo.sh
src/taint_auditor/: __init__.py  analyzer.py  catalog.py  cli.py  gitlab_post.py  orbit.py  queries.py  report.py
tests/: test_analyzer.py
