[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taint-flow-auditor"
version = "0.1.0"
description = "Interprocedural reachability auditor for security taint flows, powered by GitLab Orbit."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Taint-Flow Auditor contributors" }]
dependencies = [
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
taint-audit = "taint_auditor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taint_auditor"]

[tool.ruff]
line-length = 100
target-version = "py310"
